@@ -14,6 +14,7 @@
   * [Install-User](http://get-carbon.org/help/Install-User.html)
   * [Remove-User](http://get-carbon.org/help/Remove-User.html)
   * [Test-User](http://get-carbon.org/help/Test-User.html)
+  * [Install-WindowsFeatureIis](http://get-carbon.org/help/Install-WindowsFeatureIis.html)
   
 # 0.2.5 (29 June 2012)
 
